@@ -72,6 +72,9 @@ The <action> type attribute can be add,update,fix,remove.
       <action issue="FILEUPLOAD-222" dev="simonetripodi" type="update">
         Mark @deprecated classes/methods with @Deprecated annotation
       </action>
+      <action issue="FILEUPLOAD-233" dev="sebb" type="fix" due-to="Simone Tripodi">
+        Base64Decoder doesn't correctly implement RFC 4648
+      </action>
       <!-- Bug -->
       <action issue="FILEUPLOAD-143" dev="jochen" type="fix" due-to="Luke Scott">
         "Stream ended unexpectedly" when posting from a Flash client
@@ -120,6 +123,9 @@ The <action> type attribute can be add,update,fix,remove.
       </action>
       <action issue="FILEUPLOAD-229" dev="simonetripodi" type="fix" due-to="seb">
         toLowerCase() is Locale-dependent; should use toLowerCase(Locale.ENGLISH) instead
+      </action>
+      <action issue="FILEUPLOAD-229" dev="sebb,simonetripodi" type="fix" due-to="seb">
+        There are no unit tests for the new utils.mime classes
       </action>
       <!-- Improvement -->
       <action issue="FILEUPLOAD-182" dev="simonetripodi" type="add" due-to="Chris Lott">
